log import migration script and attach it to C_DataImport record